# code-analysis

./: .gitignore  README.md  analysis.yaml  pyproject.toml  requirements.txt
src/: cli.py  config.py  execute.py  main.py  plan.py
src/core/: __init__.py  commit_counts.py  embed.py  faultdata.py  grouping.py  lizard.py  week_rle.py
tests/: test_grouping.py
