[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis"
version = "0.1.1"
description = "Local code analysis toolkit (dry-run/check/execute)"
requires-python = ">=3.9"
dependencies = [
	"PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
code-analysis = "src.main:main"